add upgrade guide 7.0.2